# $Id$
2007-08-05 Damien Raude-Morvan <drazzib@drazzib.com>
	* Security.php : A permission can be acquired by a user via multiples roles, this means
	that, for the moment, we have to use DISTINCT to check if a user had correct permission
	(otherwise the SQL request is invalid : subrequest return more than one line).
	* Locale.php : If the browser send Accept-Value header without any quality (i.e. q=x.y)
	we have to use order of the locales to select between them (and don't use a rand() number).

2007-06-04 Benoit Grégoire  <bock@step.polymtl.ca>
	* Portugese (from portugal) translation contributed by MiguelCMA
	* locale/gen.sh:  Major change to .po file generation.  Now uses msgmerge so we won't completely throw away previous efforts by translators (will preserve comments, and use fuzzy translation).  It's also much faster (seconds instead of minutes), and produces less strings to translate.
	
2007-08-03 Damien Raude-Morvan <drazzib@drazzib.com>
	* init_php.php : Fix #363 by applying patch from Leandro to correctly set timezone info in Wifidog
	if set in configuration (allow Wifidog to work not only in Canada :).

2007-07-26 Benoit Grégoire  <bock@step.polymtl.ca>
	* DependenciesList::hook_menu():  Fix menu path conflict with Server::hook_menu();
	* Server::getAdminUI(): Add output to help debug timezone problems.  	

2007-07-25 Benoit Grégoire  <bock@step.polymtl.ca>
	* VirtualHost.php:  Fix critical problem preventing new Virtual Hosts from being created.  Thanks to Miguel for pointing this out!ssss
	* StatisticGraph.php:  Fix a bad return by reference that prevented graphs from being displayed.  Thanks to Daniel Lemay for finding it.
	* Content.php:  Fix warning when selecting owners. Fix dangling metadata objects when deleting an object.
	* Statistics::getDateRangeUI():  Make days end a minute before midnight, not a minute before noon, DOH!